resources_for_testing/tests/asm/valid/zork_slayer.s
.name "Coming for you boi"
.comment "2048 steps later..."

		sti r1, %:live, %1
live:	live %1
